# macao

./: .gitignore  CMakeLists.txt  README.md  make_ios.sh  make_web.sh  make_web_cygwin.sh  make_web_win32.bat
android/: key.keystore.jks
android/macao/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
build_web/: CMakeCache.txt  Makefile  cmake_install.cmake  macao.html  macao.html.mem  macao.js
build_web/kernel/: Makefile  cmake_install.cmake
build_web/native_ui/: Makefile  cmake_install.cmake
build_web/smartfox/: Makefile  cmake_install.cmake
build_web/xml/: Makefile  cmake_install.cmake
include/macao/: downloader.h  exec.h  game.h  net.h  types.h
include/macao/game/: types.h
ios/Macao/Macao/: AppDelegate.h  AppDelegate.m  TestView.m  ViewController.h  ViewController.m  main.m
ios/Macao/Macao.xcodeproj/: project.pbxproj
res/images/: cube.dae  cube_1.dae  effect_pack.xml  ui.xml
res/layout/: root.xml
res/layout/dialog/: dialog.xml
res/layout/slot/: slot.xml
res/plist/: string.xml
resource/version/: splash.vs
src/: downloader.c  exec.c  game.c  game_setup.c  net.c
src/exec/: game.h  mcwc.c  root.c  slot.c  trans_cube.c
web/: CMakeLists.txt  config.css  data.txt  index.html  macao.data  macao.html  macao.html.mem  macao.js  main.c  test.html
web/css/: test.css
web/jslib/: config.js  functions.js  image.js  view.js
web/jslib/smartfox/: room.js  smartfox.js
web/v1/res/font/cjk/font_regular_10/: font_regular_10.fnt
web/v1/res/font/cjk/font_regular_12/: font_regular_12.fnt
web/v1/res/font/cjk/font_regular_14/: font_regular_14.fnt
web/v1/res/font/cjk/font_regular_18/: font_regular_18.fnt
web/v1/res/font/cjk/font_regular_20/: font_regular_20.fnt
web/v1/res/font/cjk/font_regular_24/: font_regular_24.fnt
web/v1/res/font/cjk/font_regular_26/: font_regular_26.fnt
web/v1/res/font/cjk/font_regular_28/: font_regular_28.fnt
web/v1/res/font/cjk/font_regular_32/: font_regular_32.fnt
web/v1/res/font/cjk/font_regular_34/: font_regular_34.fnt
web/v1/res/font/cjk/font_regular_38/: font_regular_38.fnt
web/v1/res/font/cjk/font_regular_40/: font_regular_40.fnt
web/v1/res/font/cjk/font_regular_42/: font_regular_42.fnt
web/v1/res/font/cjk/font_regular_44/: font_regular_44.fnt
web/v1/res/font/cjk/font_regular_46/: font_regular_46.fnt
web/v1/res/font/cjk/font_regular_54/: font_regular_54.fnt
web/v1/res/font/cjk/font_regular_56/: font_regular_56.fnt
web/v1/res/images/: card.xml  demomacao.spine
web/v1/res/layout/slot/: slot.xml
web/v1/res/layout/transition/: cube.xml
web/v1/res/shaders/common/: decode.slib  light.slib  skin.slib
web/v1/res/shaders/gles2/: shader_2d_texture_color.vert  shader_3d_color.vert
(+40 files in other folders)
